--- a/NotesAPI/Dockerfile
+++ b/NotesAPI/Dockerfile
@@ -30,6 +30,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 
 ENV ASPNETCORE_URLS=http://+:8080
+ENV ASPNETCORE_ENVIRONMENT=Development   
 
 COPY --from=build /app/publish .
 
