Switch database to PostgreSQL with automatic migrations

--- a/NotesAPI/NotesAPI/appsettings.json
+++ b/NotesAPI/NotesAPI/appsettings.json
@@ -1,15 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=NotesDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=notesdb;Username=postgres;Password=postgres"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
   "AllowedHosts": "*"
 }
-
