--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,17 +10,35 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
   api:
-    build: .
+    build:
+      context: ./NotesAPI
     container_name: notes-api
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
       ASPNETCORE_URLS: "http://+:8080"
       ConnectionStrings__DefaultConnection: "Host=db;Port=5432;Database=notesdb;Username=postgres;Password=postgres"
     ports:
       - "8080:8080"
+
+  frontend:
+    build:
+      context: ./frontend
+    container_name: notes-frontend
+    depends_on:
+      - api
+    environment:
+      VITE_API_URL: http://localhost:8080
+    ports:
+      - "5173:5173"
 
 volumes:
   postgres_data:
